tests/files/flow_controller_tests/should_run/015.cmdr
//Test divide with ints
x = 100 / 2 / 3 / 4 ;
print x;
x /= 3;
print x;