tests/files/flow_controller_tests/should_fail/006.cmdr
//Should fail on divide by 0 with set
x = 2;
x /= 0;